# openToad

./: .env.example  .env.selfhosted.example  .gitignore  OpenToad项目功能清单.md  README.md  __init__.py  agent_network_test.py">  agent_network_ui.py  cli.py  cli_app.py  demo_distributed_tasks.py  demo_evolution.py  demo_full_app.py  demo_identity.py  demo_workspace.py  history.json  opentoad.bat  opentoad.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  profile.json  pyproject.toml  run_cli.py  run_full_app.py  run_opentoad.py  settings.json  test_a2a_core.py  test_a2a_gateway.py  test_agent_network_integration.py  test_agent_ui.py">  test_cli.py  tsconfig.json
apps/desktop/: pyproject.toml  settings.json
apps/desktop/src/: agent_wrapper.py  debug_main.py  main.py  run.py  run_desktop.py  settings.json  start.py
apps/desktop/src/opentoad_desktop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
apps/desktop/src/ui/: account_dialog.py  agent_network_panel.py  chat_panel.py  first_time_setup_dialog.py  icons.py  llm_config_panel.py  main_window.py  market_page.py  memory_bind_panel.py  memory_config_panel.py  memory_selector_dialog.py  memory_sidebar.py  session_sidebar.py  settings_dialog.py  tray.py
apps/web/: README.md
docker/: Dockerfile  Dockerfile.saaS  docker-compose.saaS.yml  docker-compose.selfhosted.yml
docs/: A2A_COMPLETION_SUMMARY.md  OpenToad项目功能清单.md  features.md  opentoad-mindmap.md
docs/conversation-records/: 2026-03-20-memory-system-brainstorming.md
docs/plans/: 2026-03-11-ai-assistant-design.md  2026-03-11-ai-assistant-implementation-plan.md  2026-03-15-instance-communication-design.md  2026-03-15-instance-communication-plan.md  2026-03-20-memory-system-design.md  2026-03-20-memory-system-implementation.md  2026-05-01-agent-to-agent-design.md  2026-05-01-agent-to-agent-implementation.md
docs/user-guide/: cli.md  desktop.md  web.md
extensions/web-widget/: package.json
extensions/wechat/: package.json  tsconfig.json
scripts/: package-selfhosted.sh  start_gateway.py  test_gateway_client.py  uninstall.py
src/: __init__.py  index.ts  profile.py
src/agent/: __init__.py  index.ts  prompt.py  prompt.ts  run.py  run.ts  types.py  types.ts
src/agent_network/: __init__.py  a2a_gateway.py  a2a_handler.py  discovery.py  evolution.py  orchestrator.py  protocol.py  role.py  task.py  workspace.py
src/auth/: __init__.py  service.py
src/cli/: index.ts  io.ts  main.py
src/client/: __init__.py  (+6 more)
test_checklists/: memory-system.md
(+73 files in other folders)
