[project]
name = "opentoad-desktop"
version = "1.0.0"
description = "OpenToad Desktop GUI"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "opentoad @ file://../../",
]

[project.scripts]
opentoad-desktop = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
