[project]
name = "opentoad-desktop"
version = "1.0.0"
description = "OpenToad Desktop GUI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
]

[project.scripts]
opentoad-desktop = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
